--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "nodejs",
+  "name": "nodejs-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "Collection of cli apps",
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "cli",
+    "testing"
+  ],
   "author": "Henry Bergström",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.0.1"
+    "chalk": "^5.0.1",
+    "node-fetch": "^3.2.3"
   }
 }
